Todo auth - Mysql fully working - LDAP

--- a/intranet/htdocs/intranet-tmpl/changepassword.tmpl
+++ b/intranet/htdocs/intranet-tmpl/changepassword.tmpl
@@ -12,14 +12,24 @@ function objeto_usuario(){
 
 function guardarCambiarPassword(){
 
-    var key= b64_sha256(b64_md5($('#actualpassword').val()));
-
-    document.datosAEnviar.actual_password.value = encriptar($('#actualpassword').val(), key);
-    document.datosAEnviar.new_password1.value = encriptar($('#newpassword1').val(), key);
-    document.datosAEnviar.new_password2.value = encriptar($('#newpassword2').val(), key);
-    document.datosAEnviar.usuario.value = usuario.ID;
-    document.datosAEnviar.changePassword.value = 1;
-    document.datosAEnviar.submit();
+     [% IF plainPassword == 0 %]
+         var nroRandom   = [% nroRandom %];
+         var hash_actual = b64_sha256(b64_sha256(b64_md5($("#actualpassword").val()))+nroRandom);
+         var hash_new1   = encriptar((b64_sha256(b64_md5($("#newpassword1").val()))),b64_sha256(b64_md5($("#actualpassword").val())));
+         var hash_new2   = encriptar((b64_sha256(b64_md5($("#newpassword2").val()))),b64_sha256(b64_md5($("#actualpassword").val())));
+         $("#actual_password").val(hash_actual);
+         $('#new_password1').val(hash_new1);
+         $('#new_password2').val(hash_new2);
+     [% ELSE %]
+	     var hash_actual = $("#actualpassword").val();;
+         var hash_new1   = encriptar($("#newpassword1").val(),hash_actual);
+         var hash_new2   = encriptar($("#newpassword2").val(),hash_actual);
+	     $("#actual_password").val(hash_actual);
+	     $('#new_password1').val(hash_new1);
+	     $('#new_password2').val(hash_new2);
+     [% END %]
+     $("#datosAEnviar").submit();
+     return true;
     startOverlay();
 }
 
@@ -38,13 +48,13 @@ $(document).ready(function() {
 
 </script>
 
-<form action='[% url_prefix %]/usuarios/change_passwordDB.pl' method="post" name="datosAEnviar">
-        <input type="hidden" name="new_password1">
-        <input type="hidden" name="new_password2">
-        <input type="hidden" name="usuario">
-        <input type="hidden" name="changePassword">
-        <input type="hidden" name="actual_password">
-        <input type="hidden" name="token" value="[% token %]">
+<form action='[% url_prefix %]/usuarios/change_passwordDB.pl' method="POST" name="datosAEnviar" id="datosAEnviar">
+        <input type="hidden" name="new_password1" id="new_password1" value="">
+        <input type="hidden" name="new_password2" id="new_password2" value="">
+        <input type="hidden" name="usuario" id="usuario" value="[% nro_socio %]">
+        <input type="hidden" name="changePassword" id="changePassword" value="">
+        <input type="hidden" name="actual_password" id="actual_password" value="">
+        <input type="hidden" name="token" value="[% token %]" id="token">
 </form>
 
 [% IF cambioForzado %]
