--- a/opac/htdocs/opac-tmpl/informacion.tmpl
+++ b/opac/htdocs/opac-tmpl/informacion.tmpl
@@ -1,5 +1,9 @@
 [% INCLUDE "opac-top.inc" %] 
 
-<div class='tableMsgUser'><font class='fontMsgUser'><b><div id='mensajes'>[% mensaje %]</div></b></font></div>
+<div class='tableMsgUser'>
+    <font class='fontMsgUser'>
+        <b><div id='mensajes'>[% mensaje %]</div></b>
+    </font>
+</div>
 
 [% INCLUDE "opac-bottom.inc" %]
