--- a/opac/htdocs/opac-tmpl/opac-detail.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-detail.tmpl
@@ -121,8 +121,8 @@ LOOP2
                 <a  href="[% url_prefix %]/opac-indiceLibro.pl?biblionumber=[% biblionumber %]&biblioitemnumber=[% biblioitemnumber %]">
                 <img src="[% themelang %]/images/indice.png" border="0" alt="[% 'Indice' | i18n %]"></a>
                 <br>
-                [% "Disponibilidad Actual Para Pr&eacute;stamo:" | i18n %] <b>[% cantParaPrestamo %]</b><br>	
-                [% "Disponibilidad Actual Para Sala de Lectura:" | i18n %] <b>[% cantParaSala %]</b><br>
+                [% "Disponibilidad Actual Para Pr&eacute;stamo:" | i18n %] <b>[% cantParaPrestamoActual %]</b><br>	
+                [% "Disponibilidad Actual Para Sala de Lectura:" | i18n %] <b>[% cantParaSalaActual %]</b><br>
                 [% "Cantidad Actual de Reservas:" | i18n %] <b>[% cantReservas %]</b><br>
 
                 [% IF allshared %]
