--- a/intranet/htdocs/intranet-tmpl/about/about.tmpl
+++ b/intranet/htdocs/intranet-tmpl/about/about.tmpl
@@ -22,18 +22,17 @@ function updateEdit(responseText){
 <table width="100%" border=1>
     <tr>
         <td width="50%">
-            <h4>SIU y CESPI:</h4>
-        <ul>
-            <li>Javier Díaz</li>
-        </ul>
-        <h4>LINTI - Facultad de Informática:</h4> 
-        <ul> 
-            <li>Einar Lanfranco</li>
-            <li>Matías Pagano</li>
-            <li>Augusto Pérez</li>
-            <li>Miguel Carbone</li>
-            <li>Gaspar Rajoy</li>
-        </ul>
+            <h4><a href="http://www.cespi.unlp.edu.ar" target="_blank">CESPI</a> - <a href="http://www.linti.unlp.edu.ar" target="_blank">LINTI</a> - <a href="http://www.info.unlp.edu.ar" target="_blank">Facultad de Informática</a></h4> 
+	        <ul> 
+	            <li>Javier D&iacute;az</li>
+	            <li>Einar Lanfranco</li>
+	            <li>Mat&iacute;as Pagano</li>
+	            <li>Augusto Pérez</li>
+	            <li>Miguel Carbone</li>
+	            <li>Gaspar Rajoy</li>
+	            <li>Magal&iacute; Defalco</li>
+	            <li>Francisco Raposeiras</li>
+	        </ul>
         </td>
     </tr>
 </table>
