--- a/intranet/htdocs/intranet-tmpl/about/about.tmpl
+++ b/intranet/htdocs/intranet-tmpl/about/about.tmpl
@@ -27,7 +27,7 @@ function updateEdit(responseText){
 	            <li>Javier D&iacute;az</li>
 	            <li>Einar Lanfranco</li>
 	            <li>Mat&iacute;as Pagano</li>
-	            <li>Augusto Pérez</li>
+	            <li>Augusto Perez</li>
 	            <li>Miguel Carbone</li>
 	            <li>Gaspar Rajoy</li>
 	            <li>Magal&iacute; Defalco</li>
