--- a/opac/htdocs/opac-tmpl/opac-detail.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-detail.tmpl
@@ -133,13 +133,15 @@ LOOP2
                     [% ELSE %]
                             [% IF cantParaPrestamo %]
                                 [% IF CirculationEnabled %]  <!-- si es 0 -->
-                                    [% PERL %]
-                                        print C4::AR::Filtros::to_Icon(   text    => "[% 'Reservar' | i18n %]",
-                                                                            boton   => "icon_reservar",
-                                                                            width   => "100",
-                                                                            onClick => "reservar([% id1 %],[% id2 %])",
-                                                                            title   => "[% 'Reservar' | i18n %]"
-                                                                    );
+	                                [% IF socio_data.usr_permisos_opac %] 
+	                                    [% PERL %]
+	                                        print C4::AR::Filtros::to_Icon(   text    => "[% 'Reservar' | i18n %]",
+	                                                                            boton   => "icon_reservar",
+	                                                                            width   => "100",
+	                                                                            onClick => "reservar([% id1 %],[% id2 %])",
+	                                                                            title   => "[% 'Reservar' | i18n %]"
+	                                                                    );
+                                        [% END %]
                                     [% END %]
                             [% ELSE %]
                             <!-- Si el usuario no esta logueado, se le da la siguiente informacion-->
