--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -76,8 +76,8 @@
                         </a>
                     [% ELSE %]
                           <img src="/uploads/covers/[% cat_ref_tipo_nivel3 %].png" 
-                                alt="[% 'Sin Portada para' | i18n %]&nbsp;[% cat_ref_tipo_nivel3 %]"
-                                title="[% 'Sin Portada para' | i18n %]&nbsp;[% cat_ref_tipo_nivel3 %]" />
+                                alt="[% 'Sin Portada' | i18n %]"
+                                title="[% 'Sin Portada' | i18n %]" />
                     [% END %]
                     </td>
 
