--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -21,7 +21,7 @@
 	            element: document.getElementById('file-uploader'),
 	            action: '[% url_prefix %]/usuarios/reales/uploadPicture.pl',
 	            params: {
-	            	nro_socio: '[% socio_data.usr_nro_socio %]',
+	            	nro_socio: '[% nro_socio %]',
 	            },
 	            allowedExtensions: ["bmp","jpg","gif","png","jpeg"],
 	            onComplete: function(id, fileName){detalleUsuario();},
