--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -1694,6 +1694,10 @@ input.file {
 	text-align: center;
 }
 
+.datos_tabla_estantes td {
+	text-align: left;
+	padding-left: 50px;
+}
 
 .datos_tabla td a{
     color: #35414F;
