--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -3348,15 +3348,16 @@ a.signin.menu-open span {
     -webkit-border-bottom-left-radius:5px;
     -webkit-border-bottom-right-radius:5px;
     display:none;
-    background-color:#a7b3c6;
+    background-color:#cacfd7;
     position:absolute;
     width:210px;
     z-index:100;
-    border:1px transparent;
+    border:1px solid;
+    border-color:#4F6596;
     text-align:left;
     padding:10px;
-    margin-left:-8px;
-    *margin-left:-15px;
+   /* margin-left:0px;*/
+    margin-left:-22px;
     margin-top:5px;
     color:#789;
     font-size:11px;
