varios fixes OPAC

--- a/intranet/htdocs/intranet-tmpl/about/about.tmpl
+++ b/intranet/htdocs/intranet-tmpl/about/about.tmpl
@@ -1,6 +1,6 @@
 [% INCLUDE "intranet-top.inc" %]
 [% USE HTML %]
-<script type="text/javascript" language="javascript">
+<script type="text/javascript">
 
 function edit(){
 
