--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_editar_reglas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_editar_reglas.tmpl
@@ -1,5 +1,5 @@
 
-<script language="JavaScript">
+<script>
         function borrar(sanctionrulecode){
                 document.frm.sanctionrulecode.value= sanctionrulecode;
                 document.frm.accion.value= 'delete';
