--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/tipos_de_prestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/tipos_de_prestamos.tmpl
@@ -1,6 +1,6 @@
 [% INCLUDE "intranet-top.inc" %]
 
-<script language="JavaScript" type="text/javascript">
+<script type="text/javascript">
 
 var objAH;//Objeto AjaxHelper.
 
