--- a/intranet/htdocs/intranet-tmpl/admin/generic_reports.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/generic_reports.tmpl
@@ -1,5 +1,5 @@
 [% intranet-top.inc %]
- <script language="javascript" type="text/javascript">
+ <script type="text/javascript">
   
 	function table_selected(op){
 	   document.tabla.op.value=op;
