--- a/intranet/htdocs/intranet-tmpl/admin/global/authMethods.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/authMethods.tmpl
@@ -1,7 +1,7 @@
 [% INCLUDE "intranet-top.inc" %]
 
-<script type="text/javascript" language="javascript" src="/includes/jquery/jquery-ui-1.8.13.sortable.min.js"></script>
-<script language="JavaScript" type="text/javascript">
+<script type="text/javascript" src="/includes/jquery/jquery-ui-1.8.13.sortable.min.js"></script>
+<script type="text/javascript">
     $(document).ready(function() {    
 	    zebra('tabla_datos'); 
     });
