--- a/intranet/htdocs/intranet-tmpl/admin/global/circConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/circConfig.tmpl
@@ -1,6 +1,6 @@
 [% INCLUDE "intranet-top.inc" %]
 
-<script type="text/javascript" language="javascript" charset="utf-8">
+<script type="text/javascript" charset="utf-8">
 
 $(document).ready(function() {
     actualizarTabla();
