--- a/intranet/htdocs/intranet-tmpl/admin/global/mailConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/mailConfig.tmpl
@@ -1,7 +1,7 @@
 
 [% INCLUDE "intranet-top.inc" %]
 
-<script language="JavaScript" type="text/javascript">
+<script type="text/javascript">
 
 	function guardarConfiguracion(){
         $("#accion").val("MODIFICAR_CONFIGURACION");
