--- a/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/preferencias.tmpl
@@ -5,7 +5,7 @@
 <script src="/includes/jquery/tablesorter/jquery.tablesorter.doblePaginador.js"></script>
 <link href="/includes/jquery/tablesorter/style.css" type="text/css" rel="stylesheet">
 
-<script language="JavaScript" type="text/javascript">
+<script type="text/javascript">
 
 var objAH;//Objeto AjaxHelper.
 
