--- a/intranet/htdocs/intranet-tmpl/admin/z3950/z3950servers.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/z3950/z3950servers.tmpl
@@ -1,7 +1,7 @@
 [% INCLUDE "intranet-top.inc" %]
 [% INCLUDE "FormValidateHelper.inc" %]
 
-<script type="text/javascript" language="javascript">
+<script type="text/javascript">
 $(document).ready(function() {
     actualizarTabla();
     validateAddForm(guardarNewServer);
@@ -9,7 +9,7 @@ $(document).ready(function() {
 });
 </script>
 
-<script type="text/javascript" language="javascript" src="/intranet-tmpl/includes/admin/servidoresz3950.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/includes/admin/servidoresz3950.js"></script>
 
 <div id="result"></div>
 <div id="addServer"></div>
