--- a/intranet/htdocs/intranet-tmpl/adquisiciones/addPedidoCotizacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/adquisiciones/addPedidoCotizacion.tmpl
@@ -1,6 +1,6 @@
 [% INCLUDE "FormValidateHelper.inc" %]
 [% INCLUDE  "AutocompleteHelper.inc"  %]
-<script type="text/javascript" language="javascript" src="/intranet-tmpl/includes/adquisiciones/editPedidoCotizacion.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/includes/adquisiciones/editPedidoCotizacion.js"></script>
 <div class="column1-unit">
     <div class="recomendacionform">
             <input type="hidden" name="action" value="agregar">
