--- a/intranet/htdocs/intranet-tmpl/adquisiciones/datosPedidoCotizacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/adquisiciones/datosPedidoCotizacion.tmpl
@@ -1,6 +1,6 @@
 [% INCLUDE "intranet-top.inc" %]
 <script type="text/javascript"src="/intranet-tmpl/includes/adquisiciones/generatePedidoCotizacion.js"></script>
-<script type="text/javascript" language="javascript">
+<script type="text/javascript">
     $(document).ready(function() {
         $('#pedido_cotizacion').hide() 
     });
