--- a/intranet/htdocs/intranet-tmpl/adquisiciones/listPedidoCotizacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/adquisiciones/listPedidoCotizacion.tmpl
@@ -1,6 +1,6 @@
 [% INCLUDE "intranet-top.inc" %]
 <script type="text/javascript"src="/intranet-tmpl/includes/adquisiciones/generatePresupuesto.js"></script>
-<script type="text/javascript" language="javascript">
+<script type="text/javascript">
     $(document).ready(function() {
         $('#presupuesto').hide() 
         $('#links').hide() 
