--- a/intranet/htdocs/intranet-tmpl/auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/auth.tmpl
@@ -5,7 +5,7 @@
 <head>
 <title>Meran::UNLP</title>
 <link rel="stylesheet" type="text/css" href="[% temas %]/[% tema %]/includes/login_screen.css">
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
     var URL_PREFIX  = '[% url_prefix %]';
 </script>
 <script type="text/javascript" src="/includes/jquery/jquery-min.js"></script>
