--- a/intranet/htdocs/intranet-tmpl/busquedas/filtrado.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/filtrado.tmpl
@@ -1,12 +1,12 @@
 
 [% INCLUDE "intranet-top.inc" %]
 <!-- FIXME no se usa mas -->
-<!-- <script language="javascript" type="text/javascript" src="/includes/jquery/jquery-highlight-min.js"></script> -->
-<script language="javascript" type="text/javascript" src="/intranet-tmpl/includes/estantesVirtuales.js"></script>
-<script language="javascript" type="text/javascript" src="/intranet-tmpl/includes/busquedasCatalogo-min.js"> </script>
+<!-- <script type="text/javascript" src="/includes/jquery/jquery-highlight-min.js"></script> -->
+<script type="text/javascript" src="/intranet-tmpl/includes/estantesVirtuales.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/includes/busquedasCatalogo-min.js"> </script>
 
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 $(document).ready(function() {
 
