--- a/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/controlAutoridades/controlAutoridadesSeudonimos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/controlAutoridades/controlAutoridadesSeudonimos.tmpl
@@ -6,7 +6,7 @@
 <script src="/includes/jquery/tablesorter/jquery.tablesorter.js"></script>
 
 
-<script language="javascript">
+<script>
 
 function OnChangeComboTablasSeudonimos(){
 	
