--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
@@ -17,8 +17,8 @@
         });
     });
 </script>
-<script type="text/javascript" language="javascript" src="/includes/jquery/jquery-ui-1.8.13.sortable.min.js"></script>
-<script type="text/javascript" language="javascript">
+<script type="text/javascript" src="/includes/jquery/jquery-ui-1.8.13.sortable.min.js"></script>
+<script type="text/javascript">
     $(function() {
 
 		    $("#sortable").sortable({
