--- a/intranet/htdocs/intranet-tmpl/circ/detallePrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/detallePrestamos.tmpl
@@ -2,7 +2,7 @@
 
 <fieldset class="resultado_prestamos">
 <legend class="titulo_legend_resaltado">[% 'Detalle de los pr&eacute;stamos actuales' | i18n %]</legend>
-<script type="text/javascript" language="javascript">checkTr();</script>
+<script type="text/javascript">checkTr();</script>
 
 [% IF prestamos_cant %]
 
