--- a/intranet/htdocs/intranet-tmpl/circ/devoluciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/devoluciones.tmpl
@@ -4,7 +4,7 @@
 
 <script src="/intranet-tmpl/includes/circulacion-min.js"></script>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 function inicializar(){
 	USUARIO         = new objeto_usuario();
