--- a/intranet/htdocs/intranet-tmpl/preferencias/edit_about.tmpl
+++ b/intranet/htdocs/intranet-tmpl/preferencias/edit_about.tmpl
@@ -1,6 +1,6 @@
-<script type="text/javascript" language="javascript" src="/includes/jquery/jquery.wysiwyg.js"></script>
+<script type="text/javascript" src="/includes/jquery/jquery.wysiwyg.js"></script>
 <link rel="stylesheet" href="/includes/css/wysiwyg.css" type="text/css" media="screen"/>
-<script type="text/javascript" language="javascript">
+<script type="text/javascript">
     $(document).ready(function() {
         $(function(){
             $('#about').wysiwyg();
