--- a/intranet/htdocs/intranet-tmpl/prueba/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/prueba/main.tmpl
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="/intranet-tmpl/includes/busquedasCatalogo-min.js"> </script>
 <script type="text/javascript" src="/intranet-tmpl/includes/busquedasUsuarios-min.js"></script>
 
-<script language="javascript" type="text/javascript"> 
+<script type="text/javascript"> 
 
 $(document).ready(function() {
 
