--- a/intranet/htdocs/intranet-tmpl/reports/altas_registro.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/altas_registro.tmpl
@@ -9,7 +9,7 @@
         crearDatePicker('dateselectedEnd');
     });
 </script>
-<script language="javascript" type="text/javascript" src="/intranet-tmpl/includes/busquedasCatalogo-min.js"> </script>
+<script type="text/javascript" src="/intranet-tmpl/includes/busquedasCatalogo-min.js"> </script>
 
 <script type="text/javascript" src="/intranet-tmpl/reports/reports.js"></script>
 <div>
