--- a/intranet/htdocs/intranet-tmpl/reports/disponibilidad_ejemplares.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/disponibilidad_ejemplares.tmpl
@@ -4,7 +4,7 @@
 <link href="/includes/jquery/datetimepicker/flora.datepicker.css" type="text/css" rel="stylesheet">
 <script src="/includes/jquery/validate/jquery.validate.js"></script>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 $(document).ready(function() {
     crearDatePicker('fechaIni');
@@ -13,7 +13,7 @@ $(document).ready(function() {
 });
 </script>
 
-<script language="javascript">
+<script>
 
 var objAH;
 
