--- a/intranet/htdocs/intranet-tmpl/reports/generic_result.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/generic_result.tmpl
@@ -1,6 +1,6 @@
     <!-- TMPL_INCLUDE NAME="intranet-top.inc" -->
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 function next(startfrom) {
  document.report.startfrom.value=startfrom;
