--- a/intranet/htdocs/intranet-tmpl/reports/registro.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/registro.tmpl
@@ -5,7 +5,7 @@
 [% INCLUDE 'datePicker.inc' %]
 [% INCLUDE  'AutocompleteHelper.inc'  %]
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 var objAH;
 
