--- a/intranet/htdocs/intranet-tmpl/splash.tmpl
+++ b/intranet/htdocs/intranet-tmpl/splash.tmpl
@@ -16,7 +16,7 @@
     }
 </script>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
     $(document).ready(function() {
         loginSuccess();
