--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
@@ -3,7 +3,7 @@
 <script src="/includes/jquery/jquery-highlight-min.js"></script>
 <script src="/intranet-tmpl/includes/usuarios/usuariosPotenciales.js"></script>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 
 function ordenar(orden){
