--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
@@ -1,4 +1,4 @@
-<script language="javascript">
+<script>
 function borrarSancion(id_sancion){
 
     var array = new Array; //array de una sola posicion, para que ante el eliminar sanciones
