--- a/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
+++ b/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
@@ -80,7 +80,7 @@
 		                         [% 'Informaci&oacute;n Importante' | i18n %]
 		                     [% END %]
                         </h1> 
-			            <hr class="clear-contentunit"> 
+			            <hr class="clear-contentunit" /> 
 			            <br /> 
 				        <h1>[% mail_content %]</h1> 
 				    </div>
