--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones.tmpl
@@ -1,7 +1,7 @@
 [% INCLUDE "intranet-top.inc" %]
 [% INCLUDE "WindowHelper.inc" %]
 
-<script language="JavaScript" type="text/javascript">
+<script type="text/javascript">
 
 var objAH;
 
