--- a/intranet/htdocs/intranet-tmpl/admin/global/catalogoConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/catalogoConfig.tmpl
@@ -1,5 +1,5 @@
 [% INCLUDE "intranet-top.inc" %]
-<script type="text/javascript" language="javascript" charset="utf-8">
+<script type="text/javascript" charset="utf-8">
 /*
  * modificarVariable
  * Hace el llamado ajax para poder modificar y mostrar la parte de modificacion de la variables seleccionada.
