--- a/intranet/htdocs/intranet-tmpl/admin/instalador.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/instalador.tmpl
@@ -12,7 +12,7 @@
 <meta http-equiv="Content-Tipo" content="text/html; charset=iso-8859-1">
 </head>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 function siguiente(){
 
