--- a/intranet/htdocs/intranet-tmpl/adquisiciones/generatePedidoCotizacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/adquisiciones/generatePedidoCotizacion.tmpl
@@ -1,7 +1,7 @@
 [% INCLUDE "intranet-top.inc" %]
 
 <script type="text/javascript"src="/intranet-tmpl/includes/adquisiciones/generatePedidoCotizacion.js"></script>
-<script type="text/javascript" language="javascript">
+<script type="text/javascript">
     $(document).ready(function(){
         $('.editable').attr('disabled', true)           
         checkSeleccionados(false)        
