--- a/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/controlAutoridades/controlAutoridadesSinonimos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/configuracion/controlAutoridades/controlAutoridadesSinonimos.tmpl
@@ -5,7 +5,7 @@
 <link href="/includes/jquery/tablesorter/style.css" type="text/css" rel="stylesheet">
 <script src="/includes/jquery/tablesorter/jquery.tablesorter.js" type="text/javascript"></script>
 
-<script language="javascript">
+<script>
 
 function OnChangeComboTablasSinonimos(){
 	
