--- a/intranet/htdocs/intranet-tmpl/circ/prestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/prestamos.tmpl
@@ -4,7 +4,7 @@
 
 <script src="/intranet-tmpl/includes/circulacion.js"></script>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 function detalleDelUsuario(){
 	var nro_socio= $('#nro_socio_hidden').val();
