--- a/intranet/htdocs/intranet-tmpl/herramientas/exportar.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/exportar.tmpl
@@ -1,6 +1,6 @@
 [% INCLUDE 'intranet-top.inc' %]
 
-<script language="javascript" type="text/javascript"> 
+<script type="text/javascript"> 
 
     function exportar(){
         $('#fExportacion').submit();
