--- a/intranet/htdocs/intranet-tmpl/reports/avail_year.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/avail_year.tmpl
@@ -2,7 +2,7 @@
 
 <script src="/includes/jquery/validate/jquery.validate.js"></script>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 $(document).ready(function() {
     crearDatePicker('ini');
