--- a/intranet/htdocs/intranet-tmpl/reports/generic_reports.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/generic_reports.tmpl
@@ -1,6 +1,6 @@
 [% INCLUDE "intranet-top.inc" %]
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 function swap(id,src){
 document.getElementById(id).src=src;
 }
