--- a/intranet/htdocs/intranet-tmpl/reports/historicoCirculacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/historicoCirculacion.tmpl
@@ -1,6 +1,6 @@
 [% INCLUDE "intranet-top.inc" %]
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 $(document).ready(function() {
     crearDatePicker('fechaIni');
