--- a/intranet/htdocs/intranet-tmpl/reports/historico_Prestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/historico_Prestamos.tmpl
@@ -2,7 +2,7 @@
 
 <script src="/includes/jquery/validate/jquery.validate-min.js"></script>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
     $(document).ready(function() {
         crearDatePicker('f_ini');
@@ -11,7 +11,7 @@
 
 </script>
 
-<script language="javascript">
+<script>
 
 var objAH;
 function ordenar(orden){
