--- a/intranet/htdocs/intranet-tmpl/reports/prestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/prestamos.tmpl
@@ -2,7 +2,7 @@
 
 <script src="/includes/jquery/validate/jquery.validate.js"></script>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 $(document).ready(function() {
     crearDatePicker('begindate');
@@ -15,7 +15,7 @@ $(document).ready(function() {
 </script>
 
 
-<script language="JavaScript">
+<script>
 
 
 function enviarMails(){
