--- a/intranet/htdocs/intranet-tmpl/reports/usuarios.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/usuarios.tmpl
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="/intranet-tmpl/reports/reports.js"></script>
 
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 var objAH;
 
