--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -1432,7 +1432,7 @@ li.detalle_barra_circulacion{
 .main-content table th {background-color:#4E6595;
 border:2px solid #FFFFFF;
 color:#FFFFFF;
-font-size:10pt;
+font-size:11px;
 font-weight:bold;
 height:3em;
 text-align:center;
@@ -1445,7 +1445,7 @@ text-align:center;
  text-align:left;
  font-weight:normal;
  color:rgb(80,80,80);
- font-size:10pt;
+ font-size:11px;
 }
 p.caption {clear:both;
  margin:0.5em 0 2.0em 20px;
